[gd_scene load_steps=4 format=3 uid="uid://t5qhllan2hao"]

[ext_resource type="Script" uid="uid://c1ubhdn4g1rt4" path="res://Assets/Scripts/Menu/levels_menu.gd" id="1_vtrbl"]
[ext_resource type="Texture2D" uid="uid://b57urktw3pnt6" path="res://Assets/Sprites/Backgrounds/Interface BG.png" id="2_2j6wj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2j6wj"]
bg_color = Color(0.60809547, 0.38475943, 0.16612276, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 5
shadow_offset = Vector2(0, 3)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 536.0
offset_top = 193.0
offset_right = 536.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vtrbl")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(641, 362.74997)
scale = Vector2(0.8326823, 0.70263666)
texture = ExtResource("2_2j6wj")

[node name="LEVEL1" type="Button" parent="."]
layout_mode = 0
offset_left = -351.0
offset_top = 362.0
offset_right = -181.0
offset_bottom = 461.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_2j6wj")
text = "1"

[node name="LEVEL2" type="Button" parent="."]
layout_mode = 0
offset_left = -18.0
offset_top = 363.0
offset_right = 150.0
offset_bottom = 462.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_2j6wj")
text = "2
"

[node name="LEVEL3" type="Button" parent="."]
layout_mode = 0
offset_left = 310.0
offset_top = 363.0
offset_right = 478.0
offset_bottom = 462.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_2j6wj")
text = "3
"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 509.0
offset_top = -108.0
offset_right = 677.0
offset_bottom = -9.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_2j6wj")
text = "Back
"

[connection signal="pressed" from="LEVEL1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="LEVEL2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="LEVEL3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
